--- a/EmployeesExample.Www/ClientApp/app/features/departments/departments.component.html
+++ b/EmployeesExample.Www/ClientApp/app/features/departments/departments.component.html
@@ -18,6 +18,6 @@
         </div>
     </div>
 </div>
-<div class="col-md-5">
+<div class="col-md-4 col-md-offset-1">
     <ee-department-editor [department]="editingDepartment" (onCancel)="cancelEditingDepartment()" (onSave)="saveEditingDepartment($event)"></ee-department-editor>
 </div>
