--- a/EmployeesExample.Www/ClientApp/app/features/department-editor/department-editor.component.html
+++ b/EmployeesExample.Www/ClientApp/app/features/department-editor/department-editor.component.html
@@ -4,6 +4,6 @@
     <input type="text" class="form-control" id="name" [(ngModel)]="name" (input)="markAsDirty()" />
 </div>
 <div class="form-group">
-    <button class="btn btn-default" (click)="cancel()" *ngIf="isDirty">Cancel</button>
+    <button class="btn btn-default" (click)="cancel()" *ngIf="isDirty || department">Cancel</button>
     <button class="btn btn-primary pull-right" (click)="save()" [disabled]="isSaving">Save</button>
 </div>
