--- a/EmployeesExample.Www/ClientApp/app/features/employee-editor/employee-editor.component.html
+++ b/EmployeesExample.Www/ClientApp/app/features/employee-editor/employee-editor.component.html
@@ -18,6 +18,6 @@
     </select>
 </div>
 <div class="form-group">
-    <button class="btn btn-default" (click)="cancel()" *ngIf="isDirty">Cancel</button>
+    <button class="btn btn-default" (click)="cancel()" *ngIf="isDirty || employee">Cancel</button>
     <button class="btn btn-primary pull-right" (click)="save()" [disabled]="isSaving">Save</button>
 </div>
