--- a/EmployeesExample.Www/ClientApp/app/features/department-editor/department-editor.component.html
+++ b/EmployeesExample.Www/ClientApp/app/features/department-editor/department-editor.component.html
@@ -1,9 +1,8 @@
-<h1>{{ department ? 'Edit' : 'Create' }} department</h1>
 <div class="form-group">
     <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" [(ngModel)]="name" (input)="markAsDirty()" />
+    <input type="text" class="form-control" id="name" [(ngModel)]="name" (input)="markAsDirty()" maxlength="255" />
 </div>
 <div class="form-group">
     <button class="btn btn-default" (click)="cancel()" *ngIf="isDirty || department">Cancel</button>
-    <button class="btn btn-primary pull-right" (click)="save()" [disabled]="isSaving">Save</button>
+    <button class="btn btn-primary pull-right" (click)="save()" [disabled]="saveStatus == 'Saving'">Save</button>
 </div>
