--- a/EmployeesExample.Www/ClientApp/app/features/employee-editor/employee-editor.component.html
+++ b/EmployeesExample.Www/ClientApp/app/features/employee-editor/employee-editor.component.html
@@ -1,15 +1,14 @@
-<h1>{{ employee ? 'Edit' : 'Create' }} employee</h1>
 <div class="form-group">
     <label for="firstName">First Name</label>
-    <input type="text" class="form-control" id="firstName" [(ngModel)]="firstName" (input)="markAsDirty()" />
+    <input type="text" class="form-control" id="firstName" [(ngModel)]="firstName" (input)="markAsDirty()" maxlength="50" />
 </div>
 <div class="form-group">
     <label for="lastName">Last Name</label>
-    <input type="text" class="form-control" id="lastName" [(ngModel)]="lastName" (input)="markAsDirty()" />
+    <input type="text" class="form-control" id="lastName" [(ngModel)]="lastName" (input)="markAsDirty()" maxlength="50" />
 </div>
 <div class="form-group">
     <label for="title">Title</label>
-    <input type="text" class="form-control" id="title" [(ngModel)]="title" (input)="markAsDirty()" />
+    <input type="text" class="form-control" id="title" [(ngModel)]="title" (input)="markAsDirty()" maxlength="50" />
 </div>
 <div class="form-group">
     <label for="department">Department</label>
@@ -19,5 +18,5 @@
 </div>
 <div class="form-group">
     <button class="btn btn-default" (click)="cancel()" *ngIf="isDirty || employee">Cancel</button>
-    <button class="btn btn-primary pull-right" (click)="save()" [disabled]="isSaving">Save</button>
+    <button class="btn btn-primary pull-right" (click)="save()" [disabled]="saveStatus == 'Saving'">Save</button>
 </div>
