--- a/EmployeesExample.Www/ClientApp/app/features/employees/employees.component.html
+++ b/EmployeesExample.Www/ClientApp/app/features/employees/employees.component.html
@@ -35,6 +35,7 @@
 </div>
 <div class="col-md-4 col-md-offset-1">
     <div *ngIf="departments && departments.length > 0">
-        <ee-employee-editor [departments]="departments" [employee]="editingEmployee" [isSaving]="isSavingEmployee" (onCancel)="cancelEditingEmployee()" (onSave)="saveEditingEmployee($event)"></ee-employee-editor>
+        <h1>{{ editingEmployee ? 'Edit' : 'Create' }} employee</h1>
+        <ee-employee-editor [departments]="departments" [employee]="editingEmployee" [saveStatus]="employeeSaveStatus" (onCancel)="cancelEditingEmployee()" (onSave)="saveEditingEmployee($event)"></ee-employee-editor>
     </div>
 </div>
